// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocha Package transformer should work with child packages 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "esbuild": "^0.15.6",
    "esbuild-jest": "^0.5.0",
    "jest": "^29.0.1",
  },
  "jest": {
    "coverageReporters": [
      "lcov",
    ],
    "extensionsToTreatAsEsm": [
      ".ts",
    ],
    "globals": undefined,
    "moduleNameMapper": {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\.js": "$1",
    },
    "preset": undefined,
    "roots": [
      "<rootDir>/src",
    ],
    "testEnvironment": "node",
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.tsx?$": [
        "esbuild-jest",
        {
          "format": "esm",
          "sourcemap": true,
        },
      ],
    },
  },
  "metapak": {
    "configs": [
      "tsesm",
    ],
    "data": {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "scripts": {
    "cover": "npm run jest -- --coverage",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;

exports[`mocha Package transformer should work with some files 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "coveralls": "^3.1.1",
    "jest": "^29.0.1",
  },
  "greenkeeper": {
    "ignore": [
      "jest",
      "coveralls",
    ],
  },
  "jest": {
    "coverageReporters": [
      "lcov",
    ],
    "roots": [
      "<rootDir>/src",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "metapak": {
    "data": {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": {
    "cover": "npm run jest -- --coverage",
    "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
    "jest": "NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;
